# pycreate2

./: .codacy.yml  .codeclimate.yml  .gitignore  .travis.yml  MIT_License.txt  README.rst  pyproject.toml  readme-old.rst  readme.md  requirements.txt  setup.py  test.md
.github/workflows/: python.yaml
docs/Markdown/: readme.md
examples/: displayExample.py  gui.py  ideal.py  playSong.py  runExample.py  runQuery.py  sensorExample.py
pycreate2/: OI.py  __init__.py  config.py  create2api.py  createSerial.py  opcodes.py  openInterface.py  packet.py  packets.py  runExample.py  sensorPacketLengths.py  songs.py  version.py
pycreate2/OI/: __init__.py  opcodes.py  sensor_packet_lengths.py
tests/: test.py  test_pycreate.py
tmp/: new_interface.py  new_interface2.py  test.py
