##############################################
# The MIT License (MIT)
# Copyright (c) 2017 Kevin Walchko
# see LICENSE for full details
##############################################

[tool.poetry]
name = "pycreate2"
version = "0.8.1"
description = "A library to control iRobot Create 2 with python"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/pycreate2/"
repository = 'https://github.com/MomsFriendlyRobotCompany/pycreate2'
# documentation = "http://..."
keywords = ['roomba','irobot', 'create 2', 'api', 'framework', 'library', 'robotics', 'robot']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

[tool.poetry.scripts]
create_monitor = "pycreate2.bin.create_monitor:main"
create_reset = "pycreate2.bin.create_reset:main"
create_shutdown = "pycreate2.bin.create_shutdown:main"

[tool.poetry.dependencies]
python = ">=3.6"
pyserial = "*"
colorama = "*"
simplejson = "*"
importlib-metadata = {version="*", python="<3.8"}

[tool.poetry.dev-dependencies]
pytest = "*"

# [mypy-pi_servo_serial]
# ignore_missing_imports = True

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
